# feup-aed-project-1

./: CMakeLists.txt  README.md
schedule/: classes.csv  classes_per_uc.csv
src/: Menu.cpp
